# pkdpipe

./: .gitignore  README.md  pyproject.toml  setup.py
campaigns/: cosmosim-mocks-2025.md  cosmosim-mocks-2025.yaml
data/: pkmm_aemnu_lcdm.txt
docs/: campaign-management.md
examples/: halos.py  power_spectrum_real_data.py  transfer.py
pkdpipe/: .fuse_hidden0000050100000003  __init__.py  analysis.py  campaign.py  campaign_cli.py  cli.py  config.py  cosmology.py  data.py  datainterface.py  dataspecs.py  jax_fft.py  multi_gpu_utils.py  parameter_types.py  particle_gridder.py  power_spectrum.py  simulation.py
pkdpipe/utils/: __init__.py  environment.py  file_discovery.py  synthetic_data.py
scripts/: lightcone_plotter.py  lightcone_reader.py  run.sh  submit.py
templates/: lightcone.par  pkdgrav.sh  slurm.sh
tests/: README.md  conftest.py  test_campaign.py  test_config.py  test_data_io.py  test_distributed_fft.py  test_pkdpipe.py  test_power_spectrum.py
tests/test_data/: expected_results.json  test_sim.par
tests/test_data/output/: test_sim.00001  test_sim.00001.fofstats.0  test_sim.00001.fofstats.1  test_sim.00001.fofstats.2  test_sim.00001.lcp.0  test_sim.00001.lcp.1  test_sim.00001.lcp.2  test_sim.00001.lcp.3
tests/utils/: README.md  generate_test_data.py
